<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="a">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="b">AD</string>
    <string name="c">Apply the theme to CM Launcher &amp; CM Locker.</string>
    <string name="d">Apply the theme to CM Launcher.</string>
    <string name="e">Apply the theme to CM Locker.</string>
    <string name="f">APPLY TO LAUNCHER</string>
    <string name="g">APPLY TO LOCK SCREEN</string>
    <string name="h">More stylish themes are ready for you!</string>
    <string name="i">LATER</string>
    <string name="j">GET NOW</string>
    <string name="k">CM Launcher</string>
    <string name="l">This theme only supports latest version of CM Launcher.</string>
    <string name="m">Click to install CM Launcher to apply this theme.</string>
    <string name="n">Failed, please retry</string>
    <string name="o">Downloading</string>
    <string name="p">Install</string>
    <string name="q">Failed to load, click to retry</string>
    <string name="r">Failed to load, click to retry</string>
    <string name="s">Loading…</string>
    <string name="t">Configuring…</string>
    <string name="u">Sponsored content</string>
    <string name="v">Thousands of themes are here!</string>
    <string name="w">Want a stylish screen?</string>
    <string name="x">Get the one you like in daily update!</string>
    <string name="y">"It's time to try HD wallpaper!"</string>
    <string name="z">Live wallpapers make your phone dynamic!</string>
    <string name="a0">Goodbye boring wallpapers!</string>
    <string name="a1">Swipe up to refresh…</string>
    <string name="a2">Loading…</string>
    <string name="a3">Release to refresh…</string>
    <string name="a4">Swipe down to refresh</string>
    <string name="a5">Refreshing…</string>
    <string name="a6">Release to refresh</string>
    <string name="a7">CM Launcher is necessary for applying themes. Get CM Launcher to apply the theme and enjoy more!</string>
    <string name="a8">Reload</string>
    <string name="a9">Oops! Loading failed. Please check the Internet and reload.</string>
    <string name="a_">Customize your phone with tons of stylish themes on #CMLauncher Get it now:</string>
    <string name="aa">Share a theme</string>
    <string name="ab">Cheetah Mobile Advertising Choices</string>
    <string name="ac">AGREE</string>
    <string name="ae">Applying…</string>
    <string name="af">Apply failed</string>
    <string name="ag">Apply successfully</string>
    <string name="ah">CONTINUE</string>
    <string name="ai">Default theme</string>
    <string name="aj">Delete my data</string>
    <string name="ak">Delete data collected</string>
    <string name="al">Data collcection</string>
    <string name="am">Choice of Opt-Out</string>
    <string name="an">Author</string>
    <string name="ao">APPLY</string>
    <string name="ap">INSTALL</string>
    <string name="aq">Update</string>
    <string name="ar">Downloads</string>
    <string name="as">Size</string>
    <string name="at">Using</string>
    <string name="au">Version</string>
    <string name="av">Similar themes</string>
    <string name="aw">DISAGREE</string>
    <string name="ax">Downloading latest theme</string>
    <string name="ay">"Adjusting your app settings:
After you agree with the statement, tap the button at the top right corner in every page - tap Revoke authorization - tap REVOKE."</string>
    <string name="az">By tapping CONTINUE,you agree to the statement shown.</string>
    <string name="b0">Downloading the AppChoices app@ %1$s</string>
    <string name="b1">To learn more, visit our updated %1$s, %2$s and %3$s.</string>
    <string name="b2">Purpose of Collection: We’ve made it easier for you to understand the data we collect and how we use it.</string>
    <string name="b3">More stylish content is ready for you. Tap CONTINUE to agree to our latest terms and enjoy!</string>
    <string name="b4">LATER</string>
    <string name="b5">OK</string>
    <string name="b6">REVOKE</string>
    <string name="b7">"With your consent, we would like to keep providing you with interest-based ads based on your interactions and browsing habits on our app. Our offers are made possible by sharing such data with third-party partners.
You can withdraw your consent at any time by either:"</string>
    <string name="b8">Privacy Rights:For EEA users, we describe how we will honor your privacy rights under the GDPR.</string>
    <string name="b9">Third Party Sharing: We describe the personal data we receive and share with third parties in greater details.</string>
    <string name="b_">Your data will not be collected when using this app.</string>
    <string name="ba">"We recently updated our %1$s and %2$s and encourage you to read them to understand how we process your personal data.
We have made the following changes to our Privacy Policy:"</string>
    <string name="bb">Network Error. Click to retry.</string>
    <string name="bc">Privacy Policy</string>
    <string name="bd">No more themes</string>
    <string name="be">Applied successfully</string>
    <string name="bf">Revoke authorization</string>
    <string name="bg">Stop allowing data collection</string>
    <string name="bh">By tapping REVOKE, you will quit experiencing this theme.</string>
    <string name="bi">Terms of Use</string>
    <string name="bj">Using</string>
    <string name="bk">New version of CM Launcher supports personalized lock screen, update now!</string>
    <string name="bl">CANCEL</string>
    <string name="bm">UPDATE</string>
    <string name="bn">Install CM Locker to apply this theme for your lockscreen.</string>
    <string name="bo">0</string>
    <string name="bp">Cancel</string>
    <string name="bq">Continue</string>
    <string name="br">Loading...</string>
    <string name="bs">Downloading with mobile network?</string>
    <string name="bt">Tips</string>
    <string name="bu">Details</string>
    <string name="bv">Learn More</string>
    <string name="bw">Suggested For You</string>
    <string name="bx">Wi-Fi Preload</string>
    <string name="by">Accept</string>
    <string name="bz">Cute Cartoon Couple Theme</string>
    <string name="c0">1.1.3</string>
    <string name="c1">Facebook</string>
    <string name="c2">Google</string>
    <string name="c3">Allow Ad to create a calendar event?</string>
    <string name="c4">Create calendar event</string>
    <string name="c5">Decline</string>
    <string name="c6">Allow Ad to store image in Picture gallery?</string>
    <string name="c7">Save image</string>
    <string name="c8">Tech Shop</string>
    <string name="theme_id">theme_211818521</string>
    <string name="c9">Cute Cartoon Couple Theme</string>
</resources>
