<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="#66000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:background="#66000000" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="#ffffffff" android:layout_width="312.0dip" android:layout_height="160.0dip">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff252525" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/bt" />
        <TextView android:textSize="15.0sp" android:textColor="#ff252525" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/bs" />
        <TextView android:background="#ffd6d2d6" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginTop="20.0dip" android:text="-" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="48.0dip">
            <TextView android:textSize="18.0sp" android:textColor="#ff666666" android:layout_gravity="center" android:id="@id/bz" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:text="@string/bp" android:layout_weight="0.45" />
            <TextView android:layout_gravity="center" android:background="#ffd6d2d6" android:layout_width="0.5dip" android:layout_height="fill_parent" android:text="|" android:layout_weight="0.01" />
            <TextView android:textSize="18.0sp" android:textColor="#ff49a3ea" android:layout_gravity="center" android:id="@id/c0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:text="@string/bq" android:layout_weight="0.45" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>