<?xml version="1.0" encoding="utf-8"?>
<LinearLayout pahbyqrogles:layout_gravity="center" pahbyqrogles:orientation="vertical" pahbyqrogles:background="@drawable/a1" pahbyqrogles:layout_width="fill_parent" pahbyqrogles:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:pahbyqrogles="http://schemas.android.com/apk/res/android">
    <TextView pahbyqrogles:textSize="15.0sp" pahbyqrogles:textColor="@color/h" pahbyqrogles:layout_width="fill_parent" pahbyqrogles:layout_height="wrap_content" pahbyqrogles:layout_margin="24.0dip" pahbyqrogles:text="@string/bk" />
    <View pahbyqrogles:background="@color/e" pahbyqrogles:layout_width="fill_parent" pahbyqrogles:layout_height="0.5dip" />
    <LinearLayout pahbyqrogles:orientation="horizontal" pahbyqrogles:layout_width="fill_parent" pahbyqrogles:layout_height="wrap_content">
        <Button pahbyqrogles:textSize="16.0sp" pahbyqrogles:textColor="@color/h" pahbyqrogles:id="@id/ef" pahbyqrogles:background="@color/w" pahbyqrogles:layout_width="0.0dip" pahbyqrogles:layout_height="wrap_content" pahbyqrogles:text="@string/bl" pahbyqrogles:layout_weight="1.0" />
        <View pahbyqrogles:background="@color/e" pahbyqrogles:layout_width="0.5dip" pahbyqrogles:layout_height="fill_parent" />
        <Button pahbyqrogles:textSize="16.0sp" pahbyqrogles:textColor="@color/x" pahbyqrogles:id="@id/eg" pahbyqrogles:background="@color/w" pahbyqrogles:layout_width="0.0dip" pahbyqrogles:layout_height="wrap_content" pahbyqrogles:text="@string/bm" pahbyqrogles:layout_weight="1.0" />
    </LinearLayout>
    <ViewStub pahbyqrogles:id="@id/eh" pahbyqrogles:layout_width="wrap_content" pahbyqrogles:layout_height="wrap_content" />
</LinearLayout>