<?xml version="1.0" encoding="utf-8"?>
<LinearLayout vfsqenvtczxq:orientation="vertical" vfsqenvtczxq:background="@color/y" vfsqenvtczxq:layout_width="fill_parent" vfsqenvtczxq:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:vfsqenvtczxq="http://schemas.android.com/apk/res/android">
    <include layout="@layout/s" />
    <LinearLayout vfsqenvtczxq:orientation="vertical" vfsqenvtczxq:layout_width="fill_parent" vfsqenvtczxq:layout_height="wrap_content" vfsqenvtczxq:divider="@drawable/aq" vfsqenvtczxq:showDividers="end|middle" vfsqenvtczxq:dividerPadding="16.0dip">
        <LinearLayout vfsqenvtczxq:gravity="center_vertical" vfsqenvtczxq:orientation="horizontal" vfsqenvtczxq:id="@id/h" vfsqenvtczxq:background="@drawable/ap" vfsqenvtczxq:paddingLeft="25.0dip" vfsqenvtczxq:paddingRight="25.0dip" vfsqenvtczxq:clickable="true" vfsqenvtczxq:layout_width="fill_parent" vfsqenvtczxq:layout_height="60.0dip">
            <LinearLayout vfsqenvtczxq:gravity="center|left" vfsqenvtczxq:orientation="vertical" vfsqenvtczxq:layout_width="fill_parent" vfsqenvtczxq:layout_height="60.0dip" vfsqenvtczxq:layout_weight="1.0">
                <TextView vfsqenvtczxq:textSize="15.0sp" vfsqenvtczxq:textColor="#ff000000" vfsqenvtczxq:layout_gravity="center|left" vfsqenvtczxq:layout_width="fill_parent" vfsqenvtczxq:layout_height="wrap_content" vfsqenvtczxq:layout_marginBottom="2.0dip" vfsqenvtczxq:text="@string/bf" vfsqenvtczxq:singleLine="true" />
                <TextView vfsqenvtczxq:textSize="11.0sp" vfsqenvtczxq:textColor="@color/i" vfsqenvtczxq:layout_width="fill_parent" vfsqenvtczxq:layout_height="wrap_content" vfsqenvtczxq:text="@string/bg" />
            </LinearLayout>
            <ImageView vfsqenvtczxq:layout_width="wrap_content" vfsqenvtczxq:layout_height="wrap_content" vfsqenvtczxq:src="@drawable/c2" />
        </LinearLayout>
        <LinearLayout vfsqenvtczxq:gravity="center_vertical" vfsqenvtczxq:orientation="horizontal" vfsqenvtczxq:id="@id/i" vfsqenvtczxq:background="@drawable/ap" vfsqenvtczxq:paddingLeft="25.0dip" vfsqenvtczxq:paddingRight="25.0dip" vfsqenvtczxq:clickable="true" vfsqenvtczxq:layout_width="fill_parent" vfsqenvtczxq:layout_height="60.0dip">
            <LinearLayout vfsqenvtczxq:gravity="center|left" vfsqenvtczxq:orientation="vertical" vfsqenvtczxq:layout_width="fill_parent" vfsqenvtczxq:layout_height="60.0dip" vfsqenvtczxq:layout_weight="1.0">
                <TextView vfsqenvtczxq:textSize="15.0sp" vfsqenvtczxq:textColor="#ff000000" vfsqenvtczxq:layout_gravity="center|left" vfsqenvtczxq:layout_width="fill_parent" vfsqenvtczxq:layout_height="wrap_content" vfsqenvtczxq:layout_marginBottom="2.0dip" vfsqenvtczxq:text="@string/aj" vfsqenvtczxq:singleLine="true" />
                <TextView vfsqenvtczxq:textSize="11.0sp" vfsqenvtczxq:textColor="@color/i" vfsqenvtczxq:layout_width="fill_parent" vfsqenvtczxq:layout_height="wrap_content" vfsqenvtczxq:text="@string/ak" />
            </LinearLayout>
            <ImageView vfsqenvtczxq:layout_width="wrap_content" vfsqenvtczxq:layout_height="wrap_content" vfsqenvtczxq:src="@drawable/c2" />
        </LinearLayout>
    </LinearLayout>
    <ViewStub vfsqenvtczxq:id="@id/j" vfsqenvtczxq:layout_width="wrap_content" vfsqenvtczxq:layout_height="wrap_content" />
</LinearLayout>