<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout cvqtnecsamwv:id="@id/bh" cvqtnecsamwv:background="@drawable/a1" cvqtnecsamwv:layout_width="wrap_content" cvqtnecsamwv:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:cvqtnecsamwv="http://schemas.android.com/apk/res/android">
    <ImageView cvqtnecsamwv:id="@id/bi" cvqtnecsamwv:layout_width="fill_parent" cvqtnecsamwv:layout_height="wrap_content" cvqtnecsamwv:src="@drawable/c4" cvqtnecsamwv:scaleType="fitXY" />
    <TextView cvqtnecsamwv:textSize="15.0sp" cvqtnecsamwv:textColor="#ff333333" cvqtnecsamwv:id="@id/bj" cvqtnecsamwv:layout_width="fill_parent" cvqtnecsamwv:layout_height="wrap_content" cvqtnecsamwv:layout_marginLeft="20.0dip" cvqtnecsamwv:layout_marginTop="33.0dip" cvqtnecsamwv:layout_marginRight="20.0dip" cvqtnecsamwv:layout_marginBottom="29.0dip" cvqtnecsamwv:text="@string/h" cvqtnecsamwv:layout_below="@id/bi" />
    <View cvqtnecsamwv:id="@id/bk" cvqtnecsamwv:background="#33000000" cvqtnecsamwv:layout_width="fill_parent" cvqtnecsamwv:layout_height="0.5dip" cvqtnecsamwv:layout_below="@id/bj" />
    <LinearLayout cvqtnecsamwv:gravity="center_vertical" cvqtnecsamwv:orientation="horizontal" cvqtnecsamwv:id="@id/bl" cvqtnecsamwv:layout_width="fill_parent" cvqtnecsamwv:layout_height="wrap_content" cvqtnecsamwv:layout_below="@id/bk">
        <Button cvqtnecsamwv:textSize="16.0sp" cvqtnecsamwv:textColor="#ff333333" cvqtnecsamwv:id="@id/bm" cvqtnecsamwv:background="@android:color/transparent" cvqtnecsamwv:layout_width="0.0dip" cvqtnecsamwv:layout_height="wrap_content" cvqtnecsamwv:text="@string/i" cvqtnecsamwv:layout_weight="1.0" />"
<View cvqtnecsamwv:id="@id/bn" cvqtnecsamwv:background="#33000000" cvqtnecsamwv:layout_width="0.5dip" cvqtnecsamwv:layout_height="fill_parent" />
        <Button cvqtnecsamwv:textSize="16.0sp" cvqtnecsamwv:textColor="#ff4480f7" cvqtnecsamwv:id="@id/bo" cvqtnecsamwv:background="@android:color/transparent" cvqtnecsamwv:layout_width="0.0dip" cvqtnecsamwv:layout_height="wrap_content" cvqtnecsamwv:text="@string/j" cvqtnecsamwv:layout_weight="1.0" />
    </LinearLayout>
    <ImageView cvqtnecsamwv:id="@id/bp" cvqtnecsamwv:layout_width="wrap_content" cvqtnecsamwv:layout_height="wrap_content" cvqtnecsamwv:src="@drawable/b3" cvqtnecsamwv:scaleType="fitXY" cvqtnecsamwv:layout_alignParentTop="true" cvqtnecsamwv:layout_alignParentRight="true" />
    <ViewStub cvqtnecsamwv:id="@id/bq" cvqtnecsamwv:layout_width="wrap_content" cvqtnecsamwv:layout_height="wrap_content" />
</RelativeLayout>