<?xml version="1.0" encoding="utf-8"?>
<com.ksmobile.launcher.theme.base.view.ThemeDetail njkszbqvfhyx:background="#ffffffff" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ns1="http://schemas.android.com/apk/res-auto"
  xmlns:njkszbqvfhyx="http://schemas.android.com/apk/res/android">
    <ImageView njkszbqvfhyx:id="@id/cz" njkszbqvfhyx:visibility="gone" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="wrap_content" njkszbqvfhyx:scaleType="fitXY" />
    <View njkszbqvfhyx:id="@id/d0" njkszbqvfhyx:background="#20000000" njkszbqvfhyx:visibility="visible" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="fill_parent" />
    <LinearLayout njkszbqvfhyx:orientation="vertical" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="fill_parent" njkszbqvfhyx:layout_marginTop="20.0dip">
        <LinearLayout njkszbqvfhyx:orientation="vertical" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="0.0dip" njkszbqvfhyx:layout_marginBottom="12.0dip" njkszbqvfhyx:layout_weight="1.0">
            <com.ksmobile.launcher.theme.base.view.PreviewFrameLayout njkszbqvfhyx:layout_gravity="center" njkszbqvfhyx:id="@id/d1" njkszbqvfhyx:background="@drawable/b4" njkszbqvfhyx:paddingLeft="2.0dip" njkszbqvfhyx:paddingTop="30.0dip" njkszbqvfhyx:paddingRight="2.0dip" njkszbqvfhyx:paddingBottom="30.0dip" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="0.0dip" njkszbqvfhyx:layout_weight="1.0" />
            <com.ksmobile.launcher.theme.base.view.PageIndicator njkszbqvfhyx:layout_gravity="center" njkszbqvfhyx:id="@id/bu" njkszbqvfhyx:layout_width="wrap_content" njkszbqvfhyx:layout_height="wrap_content" njkszbqvfhyx:layout_marginTop="10.0dip" njkszbqvfhyx:animateLayoutChanges="true" />
        </LinearLayout>
        <TextView njkszbqvfhyx:textSize="15.0sp" njkszbqvfhyx:textColor="#ccffffff" njkszbqvfhyx:gravity="left" njkszbqvfhyx:id="@id/d2" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="wrap_content" njkszbqvfhyx:layout_marginLeft="30.0dip" njkszbqvfhyx:layout_marginRight="30.0dip" njkszbqvfhyx:layout_marginBottom="10.0dip" njkszbqvfhyx:shadowColor="#80000000" njkszbqvfhyx:shadowDx="0.0" njkszbqvfhyx:shadowDy="1.0" njkszbqvfhyx:shadowRadius="2.0" />
        <com.ksmobile.launcher.theme.base.view.CustomTextView njkszbqvfhyx:textSize="20.0sp" njkszbqvfhyx:textColor="#ffffffff" njkszbqvfhyx:gravity="center" njkszbqvfhyx:id="@id/d3" njkszbqvfhyx:background="@drawable/am" njkszbqvfhyx:visibility="visible" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="48.0dip" njkszbqvfhyx:layout_marginLeft="30.0dip" njkszbqvfhyx:layout_marginRight="30.0dip" njkszbqvfhyx:layout_marginBottom="16.0dip" ns1:highlight="true" ns1:roundCorner="true" />
        <RelativeLayout njkszbqvfhyx:orientation="vertical" njkszbqvfhyx:id="@id/d4" njkszbqvfhyx:visibility="gone" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="97.0dip">
            <View njkszbqvfhyx:id="@id/d5" njkszbqvfhyx:background="#4cffffff" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="0.5dip" />
            <com.ksmobile.launcher.theme.base.view.CustomTextView njkszbqvfhyx:textSize="16.0sp" njkszbqvfhyx:textColor="#ffffffff" njkszbqvfhyx:gravity="center" njkszbqvfhyx:id="@id/d6" njkszbqvfhyx:background="#33000000" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="48.0dip" njkszbqvfhyx:text="@string/f" njkszbqvfhyx:layout_below="@id/d5" ns1:highlight="false" ns1:roundCorner="false" />
            <View njkszbqvfhyx:id="@id/d7" njkszbqvfhyx:background="#4cffffff" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="0.5dip" njkszbqvfhyx:layout_below="@id/d6" />
            <com.ksmobile.launcher.theme.base.view.CustomTextView njkszbqvfhyx:textSize="16.0sp" njkszbqvfhyx:textColor="#ffffffff" njkszbqvfhyx:gravity="center" njkszbqvfhyx:id="@id/d8" njkszbqvfhyx:background="#33000000" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="48.0dip" njkszbqvfhyx:text="@string/g" njkszbqvfhyx:layout_below="@id/d7" ns1:highlight="true" ns1:roundCorner="false" />
            <TextView njkszbqvfhyx:textSize="12.0dip" njkszbqvfhyx:textColor="#99ffffff" njkszbqvfhyx:layout_width="wrap_content" njkszbqvfhyx:layout_height="wrap_content" njkszbqvfhyx:layout_marginRight="4.0dip" njkszbqvfhyx:layout_marginBottom="2.0dip" njkszbqvfhyx:text="@string/b" njkszbqvfhyx:layout_alignParentRight="true" njkszbqvfhyx:layout_alignParentBottom="true" />
        </RelativeLayout>
        <com.ksmobile.launcher.widget.TextProgressBar njkszbqvfhyx:gravity="center" njkszbqvfhyx:layout_gravity="center" njkszbqvfhyx:id="@id/d9" njkszbqvfhyx:visibility="gone" njkszbqvfhyx:layout_width="fill_parent" njkszbqvfhyx:layout_height="48.0dip" njkszbqvfhyx:layout_marginLeft="30.0dip" njkszbqvfhyx:layout_marginRight="30.0dip" njkszbqvfhyx:layout_marginBottom="16.0dip" njkszbqvfhyx:max="100" njkszbqvfhyx:progress="0" style="@android:style/Widget.ProgressBar.Horizontal" />
    </LinearLayout>
    <ImageView njkszbqvfhyx:layout_gravity="center|right|top" njkszbqvfhyx:id="@id/d_" njkszbqvfhyx:visibility="gone" njkszbqvfhyx:layout_width="24.0dip" njkszbqvfhyx:layout_height="24.0dip" njkszbqvfhyx:layout_marginTop="16.0dip" njkszbqvfhyx:layout_marginRight="16.0dip" njkszbqvfhyx:src="@drawable/cc" />
    <ViewStub njkszbqvfhyx:id="@id/da" njkszbqvfhyx:layout_width="wrap_content" njkszbqvfhyx:layout_height="wrap_content" />
</com.ksmobile.launcher.theme.base.view.ThemeDetail>